# mirs

./: CMakeLists.txt  README.md  configure-with-cmake.bash  readme  version.txt
cmake/: AddApp.cmake  AddDocs.cmake  AddHDF5.cmake  AddInstallDirs.cmake  Doxyfile.in  FindHDF-EOS2.cmake  FindHDF-EOS5.cmake  FindHDF4.cmake  FindJPEG.cmake  FindNetCDF.cmake  FindSZIP.cmake  GetDependencies.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  GetMiRSversion.cmake  Installing.cmake  Options.cmake  Options2.cmake  Packaging.cmake  Pkg_Config.cmake.in  Pkg_ConfigVersion.cmake.in  Testing.cmake
data/: .anchor
gui/: Monitor.java
scripts/: AWS_download.py  extract_gfs.sh  f17_scs_benchmark.bash  f17_scs_daily_product.bash  f18_scs_benchmark.bash  f18_scs_daily_product.bash  gfs_sfr.bash  gfs_sfr_nde.bash  gpm_scs_benchmark.bash  gpm_scs_daily_product.bash  gpm_scs_nde.bash  metopA_scs_benchmark.bash  metopA_scs_daily_product.bash  metopA_scs_nde.bash  metopB_scs_benchmark.bash  metopB_scs_daily_product.bash  metopB_scs_nde.bash  metopC_scs_benchmark.bash  metopC_scs_daily_product.bash  metopC_scs_nde.bash  metopSGA1_scs_benchmark.bash  metopSGA1_scs_daily_product.bash  n18_scs_benchmark.bash  n18_scs_daily_product.bash  n19_scs_benchmark.bash  n19_scs_daily_product.bash  n20_scs_benchmark.bash  n20_scs_daily_product.bash  n20_scs_nde.bash  n21_scs_benchmark.bash  n21_scs_daily_product.bash  n21_scs_nde.bash  npp_qc_nde.bash  npp_scs_benchmark.bash  npp_scs_daily_product.bash  npp_scs_nde.bash  run_AWS_download.sh  script_functions.bash
setup/: f17_pcf_benchmark.bash  f17_pcf_daily_product.bash  f18_pcf_benchmark.bash  f18_pcf_daily_product.bash  gfs_sfr_pcf.bash  gfs_sfr_pcf_nde_template.bash  gpm_pcf_benchmark.bash  gpm_pcf_daily_product.bash  gpm_pcf_nde.bash  metopA_pcf_benchmark.bash  metopA_pcf_daily_product.bash  metopA_pcf_nde.bash  metopB_pcf_benchmark.bash  n20_pcf_nde.bash  (+23 more)
src/crtm/REL-2.1.1/: CMakeLists.txt  files.cmake  make.macros  makefile
src/crtm/REL-2.1.1/libsrc/: Common_RTSolution.f90
src/lib/: CMakeLists.txt  files.cmake  makefile
src/lib/FwdOperProcess/: FwdOperator.f90
src/lib/InversProcess/: GeophCovBkg.f90  SeFeErrCov.f90  VarOprs.f90
src/lib/PrePostProcess/: PreClassif.f90
src/lib/io/: IO_Colocate.f90  IO_DEP.f90  IO_InstrConfig.f90  IO_MeasurData.f90  IO_Misc.f90  IO_Monitor.f90  IO_Noise.f90  IO_Regress.f90  IO_SFR.f90  IO_Scene.f90  io_ssmis.f90
src/lib/math/: mathFcts.f90
src/lib/misc/: CntrlParams.f90  Consts.f90  TuningParams.f90  misc.f90
src/lib/noise/: Noise.f90
src/lib/qc/: ErrorHandling.f90  QCchecking.f90  QCchecking.f90_bak
src/lib/utilities/: bias_NeuralNetwork.f90  utils.f90
src/lib_cpp/: CMakeLists.txt  makefile
src/testbed/: CMakeLists.txt  makefile
src/testbed/biasGenerAndMonit/: CMakeLists.txt  Calib_generic_rad.f90  Calib_generic_rad.pro  Calib_generic_rad_geoph.pro  biasMeanStdv.pro  biasMonitor.pro  biasMonitor_record.pro  makefile
src/testbed/chopp/: CMakeLists.txt
src/testbed/ffColloc/: CMakeLists.txt  makefile  viirsForFracColloc.f90
src/testbed/fm/: CMakeLists.txt  checkFMaccur_metopC.pro  checkFMaccur_n18.pro  fm_f16.f90  fm_f17.f90  fm_f18.f90  fm_f19.f90  fm_gpm.f90  fm_metopA.f90  fm_metopB.f90  fm_metopC.f90  fm_metopSGA1.f90  fm_n18.f90  fm_n19.f90  fm_n20.f90  fm_n21.f90  fm_npp.f90  makefile  modifyNedt_ssmis.f90
src/testbed/grid/: CMakeLists.txt  climate.pro  dynamicBackground.f90  emspectrum.f90  emspectrum.pro  gridBias.f90  gridDep.f90  gridDep.pro  gridDepClimate.f90  gridEdr.f90  gridEdr.pro  gridEdrClimate.f90  gridMirs.pro  gridNwp.pro  gridNwpAsym.pro  gridNwpBias.pro  gridRad.f90  gridRad.pro  gridRain.f90  gridVertical.f90  interDep.f90  interEdr.f90  intergrid.pro  interp2p.pro  lndsea25.tag  lndsea30.tag  lndsea50.tag  nongridMirs_dep.pro  nongridMirs_edr.pro  p2pDep.f90  p2pEdr.f90  p2pRad.f90  p2p_mirs_nwp.pro  timecross.pro  vertical.pro  verticalDiff.pro
src/testbed/ims/: CMakeLists.txt  imsColloc.f90  makefile
src/testbed/mergeEDR/: CMakeLists.txt
src/testbed/mergeNEDTofDiffInstr/: CMakeLists.txt  makefile  mergeNedt_metopSGA1_mws.f90  mergeNedt_n20_atms.f90  mergeNedt_n21_atms.f90
src/testbed/mirs2nc/: CMakeLists.txt  common_header.h  constants.h  defaults.h  defdim.cpp  defvar.h  gnrt_nc_img.cpp  gnrt_nc_snd.cpp  jd2md.cpp  leapyear.cpp  makefile  memallocdep.cpp  memallocedr.cpp  mirs2nc.cpp  mirs2nc_class.cpp  openfs_sw.cpp  rmirs_dep.cpp  rmirs_edr.cpp  rmirs_wnetcdf.cpp  set_nc_img.cpp  set_nc_snd.cpp  swath.h  utc2hms.cpp  wrt_nc_gdata.cpp  wrt_nc_img.cpp  wrt_nc_snd.cpp
src/testbed/nedtMonitoring/: MonitorNEDT.pro  MonitorNEDT_granule.pro  MonitorNEDT_record.pro  MonitorQC.pro  MonitorQC_granule.pro  MonitorQC_record.pro  MonitorWT_n18.pro  checkNEDT.pro
src/testbed/nwp/: CMakeLists.txt  colocNWPwRad.f90  makefile
src/testbed/rdr2tdr/: CMakeLists.txt  calib_f16_ssmis.f90  makefile  rdr2tdr_aqua_amsre.pro  rdr2tdr_f19_ssmis.f90  rdr2tdr_gcomw1_amsr2.cc  rdr2tdr_gpm_gmi.f90  rdr2tdr_metopA_amsua.f90  rdr2tdr_metopA_mhs.f90  rdr2tdr_metopB_amsua.f90  rdr2tdr_metopB_mhs.f90  rdr2tdr_metopC_mhs.f90  rdr2tdr_metopSGA1_mws.cc  rdr2tdr_mtma_madras.cc  rdr2tdr_mtsa_saphir.cc  rdr2tdr_n18_amsua.f90  rdr2tdr_n18_mhs.f90  rdr2tdr_n19_amsua.f90  rdr2tdr_n19_mhs.f90  rdr2tdr_n20_atms.cc  rdr2tdr_n21_atms.cc  rdr2tdr_npp_atms.cc  rdr2tdr_npp_atms_proxy.cc  rdr2tdr_trmm_tmi.f90
src/testbed/retrRegress/: ApplyRegress.f90  CMakeLists.txt
src/testbed/sfr/: CMakeLists.txt  GET_EMISS_1DALG.f90  avn_add_wth.c  avn_data.c  cal_vars.c  dsr_run.c  fun_sat.c  fun_tis.c  fun_tis_nn.c  fun_tis_xgb.c  makefile  mask_stype.c  onelyr.f90  process.c  prod_data.c  rd_gmi.c  rd_mhs.c  rd_ssmis.c  sat_data.c  sfr.c  sfr_intg.c  snowfall.c
src/testbed/sfr/d_fun/: d_darrc.c  d_darrc.h  d_jsec.c  d_jsec.h  d_sys.c  d_sys.h
src/testbed/sfr2dep/: CMakeLists.txt  makefile  sfr2dep.f90
src/testbed/sweClimo/: CMakeLists.txt  makefile  prepSweClimo.f90
src/testbed/tdr2sdr/: CMakeLists.txt  tdr2sdr.f90
src/testbed/vipp/: CMakeLists.txt  vipp.f90  vipp.f90_bak
(+58 files in other folders)
