if(MIRS_BUILD_FORTRAN)
	add_subdirectory(biasGenerAndMonit)
	add_subdirectory(chopp)
	add_subdirectory(fm)
	add_subdirectory(ims)
	add_subdirectory(ffColloc)
	add_subdirectory(mergeEDR)
	add_subdirectory(mergeNEDTofDiffInstr)
	add_subdirectory(nwp)
	#add_subdirectory(rdr2tdr)
	add_subdirectory(retrRegress)
	add_subdirectory(sweClimo)
	#add_subdirectory(sfr)
	add_subdirectory(sfr2dep)
	add_subdirectory(tdr2sdr)
	add_subdirectory(vipp)
	add_subdirectory(grid)
endif()
#add_subdirectory(mirs2nc)

