include(AddApp)

addapp_std(fm_f16 fm_f16.f90)
target_link_libraries(fm_f16 MiRS-f)
addapp_std(modifyNedt_ssmis modifyNedt_ssmis.f90)
target_link_libraries(modifyNedt_ssmis MiRS-f)
addapp_std(fm_n18 fm_n18.f90)
target_link_libraries(fm_n18 MiRS-f)
addapp_std(fm_metopA fm_metopA.f90)
target_link_libraries(fm_metopA MiRS-f)
addapp_std(fm_n19 fm_n19.f90)
target_link_libraries(fm_n19 MiRS-f)
addapp_std(fm_f18 fm_f18.f90)
target_link_libraries(fm_f18 MiRS-f)
addapp_std(fm_npp fm_npp.f90)
target_link_libraries(fm_npp MiRS-f)
addapp_std(fm_aqua fm_aqua.f90)
target_link_libraries(fm_aqua MiRS-f)
addapp_std(fm_fy3ri fm_fy3ri.f90)
target_link_libraries(fm_fy3ri MiRS-f)
addapp_std(fm_trmm fm_trmm.f90)
target_link_libraries(fm_trmm MiRS-f)
addapp_std(fm_mtsa fm_mtsa.f90)
target_link_libraries(fm_mtsa MiRS-f)
addapp_std(fm_mtma fm_mtma.f90)
target_link_libraries(fm_mtma MiRS-f)
addapp_std(fm_metopB fm_metopB.f90)
target_link_libraries(fm_metopB MiRS-f)
addapp_std(fm_gcomw1 fm_gcomw1.f90)
target_link_libraries(fm_gcomw1 MiRS-f)
addapp_std(fm_f17 fm_f17.f90)
target_link_libraries(fm_f17 MiRS-f)
addapp_std(fm_gpm fm_gpm.f90)
target_link_libraries(fm_gpm MiRS-f)
addapp_std(fm_f19 fm_f19.f90)
target_link_libraries(fm_f19 MiRS-f)
addapp_std(fm_n20 fm_n20.f90)
target_link_libraries(fm_n20 MiRS-f)
addapp_std(fm_n21 fm_n21.f90)
target_link_libraries(fm_n21 MiRS-f)
addapp_std(fm_metopSGA1 fm_metopSGA1.f90)
target_link_libraries(fm_metopSGA1 MiRS-f)

addapp_std(fm_metopC fm_metopC.f90)
target_link_libraries(fm_metopC MiRS-f)

