include(AddApp)

addapp_std(gridEdr gridEdr.f90)
target_link_libraries(gridEdr MiRS-f)
addapp_std(gridRad gridRad.f90)
target_link_libraries(gridRad MiRS-f)
addapp_std(gridBias gridBias.f90)
target_link_libraries(gridBias MiRS-f)
addapp_std(gridDep gridDep.f90)
target_link_libraries(gridDep MiRS-f)
addapp_std(p2pEdr p2pEdr.f90)
target_link_libraries(p2pEdr MiRS-f)
addapp_std(gridRain gridRain.f90)
target_link_libraries(gridRain MiRS-f)
addapp_std(p2pDep p2pDep.f90)
target_link_libraries(p2pDep MiRS-f)
addapp_std(gridDepClimate gridDepClimate.f90)
target_link_libraries(gridDepClimate MiRS-f)
addapp_std(gridEdrClimate gridEdrClimate.f90)
target_link_libraries(gridEdrClimate MiRS-f)
addapp_std(gridVertical gridVertical.f90)
target_link_libraries(gridVertical MiRS-f)
addapp_std(dynamicBackground dynamicBackground.f90)
target_link_libraries(dynamicBackground MiRS-f)
addapp_std(p2pRad p2pRad.f90)
target_link_libraries(p2pRad MiRS-f)
addapp_std(interEdr interEdr.f90)
target_link_libraries(interEdr MiRS-f)
addapp_std(interDep interDep.f90)
target_link_libraries(interDep MiRS-f)
addapp_std(emspectrum emspectrum.f90)
target_link_libraries(emspectrum MiRS-f)
addapp_std(qcRetrieval qcRetrieval.f90)
target_link_libraries(qcRetrieval MiRS-f)

